// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`library > composes hero + cta + footer for every target without token conflicts > html 1`] = `
"# Build this page as a single self-contained HTML file: Northwind

You are an expert creative front-end developer. Reproduce the page below exactly — same layout, copy, visuals, motion and interaction. Hardcode every value given here; nothing in it is a suggestion. Document language: \`en\`.

Produce a **single self-contained \`index.html\`**. Pure HTML/CSS/JS in one file: no build step, no framework, no bundler.
Load third-party code only through the ES-module importmap given below, inside \`<script type="module">\`.
Load fonts with \`<link>\` tags to Google Fonts. Put every design token in CSS custom properties on \`:root\`.

## What it is

A 3-section page, in this order:

1. **Ember Field Hero** (hero, dark): Full-viewport dark hero over a canvas dot field that warms to ember orange around the pointer, with a bottom-left serif headline that rises word by word out of a clipping mask.
2. **Ticker Band CTA** (cta, light): Light call-to-action card with an infinite ember ticker band across its top edge, an oversized serif headline and a dark pill button whose label rolls to a duplicate on hover.
3. **Wordmark Footer** (footer, dark): Dark footer with a brand column, three link columns and a full-bleed wordmark fitted edge to edge that rises letter by letter as the page bottoms out.

## Design tokens

\`\`\`css
:root {
  --color-ink: #0b0b0c;
  --color-paper: #f2efe8;
  --color-muted: #8a877f;
  --color-ember: #ff5a1f;
  --color-hairline: rgb(242 239 232 / 0.14);
  --radius-pill: 999px;
  --radius-card: 28px;
  --ease-out-expo: cubic-bezier(0.16, 1, 0.3, 1);
}
\`\`\`

### Fonts

- **Instrument Serif** (display): weights 400
- **Instrument Serif** italic (display): weights 400
- **Geist** (body): weights 400, 500

Load via \`https://fonts.googleapis.com/css2?family=Instrument+Serif:ital,wght@0,400;1,400&family=Geist:wght@400;500&display=swap\`.

## Libraries

\`\`\`html
<script type="importmap">
{
  "imports": {
    "lenis": "https://cdn.jsdelivr.net/npm/lenis@1.3.26/dist/lenis.mjs"
  }
}
</script>
\`\`\`

## Sections (in order)

### 1) Ember Field Hero — \`hero\`

\`<section>\` height \`100svh\`, min-height \`40rem\`, background \`--color-ink\`, text \`--color-paper\`,
\`position: relative; overflow: hidden; isolation: isolate\`.

**Dot field (background).** A \`<canvas>\` absolutely filling the section at \`z-index: -1\`, sized to
the section × \`min(devicePixelRatio, 2)\`. It draws a square lattice of dots, spacing **22px**
(CSS px), base radius **1px**, base colour \`--color-paper\` at **14%** opacity. Each frame:
- a slow travelling wave modulates radius: \`r = 1 + 0.6 * sin(x * 0.012 + y * 0.008 + t * 0.0006)\`;
- within **180px** of the smoothed pointer, dots grow up to **2.6px** and blend toward
  \`--color-ember\` at up to **90%** opacity, with a smoothstep falloff to the edge of the radius;
- the pointer is smoothed with lerp **0.08** per frame; when the pointer leaves the section it
  glides back to the section's centre-right (\`70%\`, \`45%\`).
Redraw on \`requestAnimationFrame\` only while the section intersects the viewport.

**Header** (absolute top, \`padding: 28px 40px\`, flex row, space-between, items-center):
- left: a 10px \`--color-ember\` square followed by the wordmark **Northwind** (Geist 500, 15px,
  letter-spacing \`-0.01em\`);
- centre: three links **Product**, **Customers**, **Pricing** (Geist 400, 14px,
  \`--color-muted\`, hover \`--color-paper\`, gap 32px; hidden below 768px);
- right: a ghost pill **Sign in** (1px \`--color-hairline\` border, \`padding: 10px 18px\`, 14px).

**Content** (absolute bottom-left, \`left: 40px; bottom: 48px; right: 40px\`, flex row,
space-between, items-end; column below 768px with 32px gap):
- \`<h1>\` two lines, **Signal over** / **noise.**, Instrument Serif 400,
  \`font-size: clamp(3.5rem, 9vw, 9.5rem)\`, \`line-height: 0.92\`, \`letter-spacing: -0.03em\`.
  The second line is italic and coloured \`--color-ember\`.
  Every word sits in its own \`overflow: hidden\` box with \`padding-bottom: 0.08em\` and rises from
  \`translateY(110%)\` to \`0\`, **900ms**, \`--ease-out-expo\`, **90ms** stagger across both lines,
  starting **150ms** after load.
- right column (max-width 340px): the subline **Infrastructure analytics that surfaces the one metric that matters, the moment it moves.** (Geist 400, 16px, line-height 1.55,
  \`--color-muted\`), then 24px below a solid pill button **Start free trial**
  (\`--color-paper\` background, \`--color-ink\` text, Geist 500 15px, \`padding: 14px 22px\`, radius
  \`--radius-pill\`) with a trailing 16px arrow (\`M5 12h14M13 6l6 6-6 6\`, stroke 1.8) that moves
  **4px** right on hover (200ms, \`--ease-out-expo\`). The column fades up from \`y: 16px, opacity 0\`
  over 700ms, starting 600ms after load.

**Bottom hairline.** A 1px \`--color-hairline\` rule spans the section 24px above its bottom edge,
scaling in from \`scaleX(0)\` (origin left) over 1200ms starting 300ms after load.

Smooth scrolling for the whole page uses Lenis (\`new Lenis({ smoothWheel: true })\` driven by a
\`requestAnimationFrame\` loop). Load it with a dynamic \`import()\` and swallow failures: smooth
scroll is an enhancement, and the hero must still split and animate if the CDN is unreachable.

### 2) Ticker Band CTA — \`cta\`

\`<section>\` with \`padding: 12px\` on a \`--color-ink\` page background (the inset makes the card
float). Inside, one card: background \`--color-paper\`, text \`--color-ink\`, radius \`--radius-card\`,
\`overflow: hidden\`.

**Ticker band** (top of the card, height 44px, background \`--color-ember\`, text \`--color-ink\`,
Geist 500, 13px, uppercase, letter-spacing \`0.14em\`). The text **Ship faster · Sleep better · Know first** followed by a
6px ink dot is repeated enough times to cover twice the viewport width, laid out in one
\`display: flex; width: max-content\` track. The track translates from \`0\` to \`-50%\` linearly
over **28s**, looping forever, and pauses while the pointer is over the band.

**Body** (\`padding: clamp(48px, 9vw, 128px) clamp(24px, 6vw, 96px)\`), a two-column grid
(\`1.4fr 1fr\`, gap 48px, items-end; one column below 900px):
- \`<h2>\` **Ready when your data is.**: Instrument Serif 400, \`font-size: clamp(3rem, 7.5vw, 7.5rem)\`,
  \`line-height: 0.95\`, \`letter-spacing: -0.03em\`. On entering the viewport (once, 25% visible)
  it rises from \`y: 40px, opacity 0\` over 1000ms \`--ease-out-expo\`.
- right column: **Connect a source in two minutes. No credit card, no sales call, no lock-in.** (Geist 400, 17px, line-height 1.55, \`--color-muted\`, max-width 360px),
  then a row (gap 20px, margin-top 28px, items-center):
  - primary pill **Get started**: background \`--color-ink\`, text \`--color-paper\`, Geist 500 15px,
    height 52px, \`padding: 0 26px\`, radius \`--radius-pill\`. The label is a 1-line window
    (\`overflow: hidden\`, height 1.2em) holding the label twice stacked; on hover the stack
    translates \`-50%\` over 450ms \`--ease-out-expo\`, so the copy rolls up into its duplicate.
  - text link **Talk to an engineer** with a 1px underline that scales from \`scaleX(1)\` to
    \`scaleX(0)\` (origin right) on hover, then back from the left on leave.
The right column enters 150ms after the heading with the same rise.

### 3) Wordmark Footer — \`footer\`

\`<footer>\` background \`--color-ink\`, text \`--color-paper\`, \`padding: 96px 40px 0\` (24px sides
below 768px), \`overflow: hidden\`.

**Top grid** (\`grid-template-columns: 1.6fr repeat(3, 1fr)\`, gap 48px; two columns below 900px,
one below 560px):
- brand column: a 10px \`--color-ember\` square, then **Analytics for teams who would rather be building.** (Instrument Serif 400, 32px,
  line-height 1.1, max-width 320px, margin-top 20px) and a mail link **hello@northwind.dev**
  (Geist 400, 15px, \`--color-muted\`, hover \`--color-paper\`, margin-top 24px).
- three link columns headed **Product**, **Company**, **Resources** (Geist 500, 12px, uppercase,
  letter-spacing 0.14em, \`--color-muted\`, margin-bottom 18px), each with four links
  (Geist 400, 15px, line-height 2.1):
  Product → Overview, Integrations, Changelog, Status ·
  Company → About, Careers, Customers, Contact ·
  Resources → Docs, Guides, API reference, Security.
  Each link shows a 6px ember dot that scales from 0 to 1 at its left on hover while the text
  shifts 12px right (300ms \`--ease-out-expo\`).

**Legal row** (margin-top 80px, \`padding: 20px 0\`, border-top 1px \`--color-hairline\`, flex
space-between, Geist 400 13px \`--color-muted\`): **© 2026 Northwind Labs** on the left; **Privacy**,
**Terms**, **Cookies** (gap 24px) on the right.

**Wordmark.** Below the legal row, **Northwind** set in Instrument Serif 400, one line,
\`line-height: 0.8\`, sized by JS so its width equals the footer's inner width exactly (measure
at 100px, scale the font size proportionally, re-fit on resize and after fonts load). Colour
\`--color-paper\`. It is clipped by the footer's bottom edge by 12% of its own height.
Each letter is an \`inline-block\` that starts at \`translateY(60%)\` and \`opacity 0\`; when the
footer is 30% visible (once) the letters rise to \`0\` / \`1\` over 1100ms \`--ease-out-expo\` with a
**45ms** stagger from left to right.

## Fixed parameters (bake these in)

**Ember Field Hero**

- Lattice spacing 22px · base radius 1px · base alpha 0.14 · wave \`0.012 / 0.008 / 0.0006\`, amplitude 0.6
- Pointer radius 180px · max radius 2.6px · max ember alpha 0.9 · pointer lerp 0.08 · idle anchor (70%, 45%)
- Headline word rise 110% → 0, 900ms, stagger 90ms, delay 150ms · subline column delay 600ms / 700ms / y 16px
- Hairline 24px from bottom, 1200ms, delay 300ms
- Horizontal padding 40px (24px below 768px)

**Ticker Band CTA**

- Page inset 12px · card radius 28px · ticker height 44px, 28s loop, pause on hover
- Heading rise y 40px, 1000ms, threshold 0.25, once · right column delay 150ms
- Button height 52px · label roll 450ms
- Grid \`1.4fr 1fr\`, collapses below 900px

**Wordmark Footer**

- Padding 96px top, 40px sides (24px < 768px) · grid \`1.6fr repeat(3, 1fr)\` gap 48px
- Link hover: dot 6px scale 0→1, text x 0→12px, 300ms
- Legal row margin-top 80px, 13px
- Wordmark fit to inner width, line-height 0.8, bottom clip 12%, letters y 60%→0, 1100ms, stagger 45ms, threshold 0.3

## Assets

No external assets.

## Global rules

- Responsive from 360px to ultra-wide; no horizontal scroll at any width.
- Respect \`prefers-reduced-motion: reduce\`: skip entrance animations and scroll-linked motion, show final states.
- Semantic landmarks (\`header\`, \`main\`, \`section\` with headings, \`footer\`), visible \`:focus-visible\` states, \`alt\` text as given.
- Scroll and pointer listeners are passive; animate only \`transform\` and \`opacity\` (and \`filter\`/\`clip-path\` where specified).
"
`;

exports[`library > composes hero + cta + footer for every target without token conflicts > next 1`] = `
"# Build this page as a Next.js App Router project: Northwind

You are an expert creative front-end developer. Reproduce the page below exactly — same layout, copy, visuals, motion and interaction. Hardcode every value given here; nothing in it is a suggestion. Document language: \`en\`.

Build a **Next.js (App Router) + TypeScript** project styled with **Tailwind CSS v4**.
The page lives in \`app/page.tsx\`; each section is a component under \`components/\`. Mark components that use hooks, pointer or scroll listeners with \`"use client"\`.
Load fonts with \`next/font/google\`. Put design tokens in \`@theme\` in \`app/globals.css\`. Use \`next/image\` for still images with the given URLs (add the host to \`images.remotePatterns\`).

## What it is

A 3-section page, in this order:

1. **Ember Field Hero** (hero, dark): Full-viewport dark hero over a canvas dot field that warms to ember orange around the pointer, with a bottom-left serif headline that rises word by word out of a clipping mask.
2. **Ticker Band CTA** (cta, light): Light call-to-action card with an infinite ember ticker band across its top edge, an oversized serif headline and a dark pill button whose label rolls to a duplicate on hover.
3. **Wordmark Footer** (footer, dark): Dark footer with a brand column, three link columns and a full-bleed wordmark fitted edge to edge that rises letter by letter as the page bottoms out.

## Design tokens

\`\`\`css
:root {
  --color-ink: #0b0b0c;
  --color-paper: #f2efe8;
  --color-muted: #8a877f;
  --color-ember: #ff5a1f;
  --color-hairline: rgb(242 239 232 / 0.14);
  --radius-pill: 999px;
  --radius-card: 28px;
  --ease-out-expo: cubic-bezier(0.16, 1, 0.3, 1);
}
\`\`\`

### Fonts

- **Instrument Serif** (display): weights 400
- **Instrument Serif** italic (display): weights 400
- **Geist** (body): weights 400, 500

Load with \`next/font/google\`.

## Libraries

- \`lenis@^1.3.26\`

## Sections (in order)

### 1) Ember Field Hero — \`hero\`

\`<section>\` height \`100svh\`, min-height \`40rem\`, background \`--color-ink\`, text \`--color-paper\`,
\`position: relative; overflow: hidden; isolation: isolate\`.

**Dot field (background).** A \`<canvas>\` absolutely filling the section at \`z-index: -1\`, sized to
the section × \`min(devicePixelRatio, 2)\`. It draws a square lattice of dots, spacing **22px**
(CSS px), base radius **1px**, base colour \`--color-paper\` at **14%** opacity. Each frame:
- a slow travelling wave modulates radius: \`r = 1 + 0.6 * sin(x * 0.012 + y * 0.008 + t * 0.0006)\`;
- within **180px** of the smoothed pointer, dots grow up to **2.6px** and blend toward
  \`--color-ember\` at up to **90%** opacity, with a smoothstep falloff to the edge of the radius;
- the pointer is smoothed with lerp **0.08** per frame; when the pointer leaves the section it
  glides back to the section's centre-right (\`70%\`, \`45%\`).
Redraw on \`requestAnimationFrame\` only while the section intersects the viewport.

**Header** (absolute top, \`padding: 28px 40px\`, flex row, space-between, items-center):
- left: a 10px \`--color-ember\` square followed by the wordmark **Northwind** (Geist 500, 15px,
  letter-spacing \`-0.01em\`);
- centre: three links **Product**, **Customers**, **Pricing** (Geist 400, 14px,
  \`--color-muted\`, hover \`--color-paper\`, gap 32px; hidden below 768px);
- right: a ghost pill **Sign in** (1px \`--color-hairline\` border, \`padding: 10px 18px\`, 14px).

**Content** (absolute bottom-left, \`left: 40px; bottom: 48px; right: 40px\`, flex row,
space-between, items-end; column below 768px with 32px gap):
- \`<h1>\` two lines, **Signal over** / **noise.**, Instrument Serif 400,
  \`font-size: clamp(3.5rem, 9vw, 9.5rem)\`, \`line-height: 0.92\`, \`letter-spacing: -0.03em\`.
  The second line is italic and coloured \`--color-ember\`.
  Every word sits in its own \`overflow: hidden\` box with \`padding-bottom: 0.08em\` and rises from
  \`translateY(110%)\` to \`0\`, **900ms**, \`--ease-out-expo\`, **90ms** stagger across both lines,
  starting **150ms** after load.
- right column (max-width 340px): the subline **Infrastructure analytics that surfaces the one metric that matters, the moment it moves.** (Geist 400, 16px, line-height 1.55,
  \`--color-muted\`), then 24px below a solid pill button **Start free trial**
  (\`--color-paper\` background, \`--color-ink\` text, Geist 500 15px, \`padding: 14px 22px\`, radius
  \`--radius-pill\`) with a trailing 16px arrow (\`M5 12h14M13 6l6 6-6 6\`, stroke 1.8) that moves
  **4px** right on hover (200ms, \`--ease-out-expo\`). The column fades up from \`y: 16px, opacity 0\`
  over 700ms, starting 600ms after load.

**Bottom hairline.** A 1px \`--color-hairline\` rule spans the section 24px above its bottom edge,
scaling in from \`scaleX(0)\` (origin left) over 1200ms starting 300ms after load.

Smooth scrolling for the whole page uses Lenis (\`new Lenis({ smoothWheel: true })\` driven by a
\`requestAnimationFrame\` loop). Load it with a dynamic \`import()\` and swallow failures: smooth
scroll is an enhancement, and the hero must still split and animate if the CDN is unreachable.

**a Next.js App Router project notes:**

\`components/EmberFieldHero.tsx\` is a client component. Instantiate Lenis once in a small
\`components/SmoothScroll.tsx\` client component mounted in \`app/layout.tsx\`.

### 2) Ticker Band CTA — \`cta\`

\`<section>\` with \`padding: 12px\` on a \`--color-ink\` page background (the inset makes the card
float). Inside, one card: background \`--color-paper\`, text \`--color-ink\`, radius \`--radius-card\`,
\`overflow: hidden\`.

**Ticker band** (top of the card, height 44px, background \`--color-ember\`, text \`--color-ink\`,
Geist 500, 13px, uppercase, letter-spacing \`0.14em\`). The text **Ship faster · Sleep better · Know first** followed by a
6px ink dot is repeated enough times to cover twice the viewport width, laid out in one
\`display: flex; width: max-content\` track. The track translates from \`0\` to \`-50%\` linearly
over **28s**, looping forever, and pauses while the pointer is over the band.

**Body** (\`padding: clamp(48px, 9vw, 128px) clamp(24px, 6vw, 96px)\`), a two-column grid
(\`1.4fr 1fr\`, gap 48px, items-end; one column below 900px):
- \`<h2>\` **Ready when your data is.**: Instrument Serif 400, \`font-size: clamp(3rem, 7.5vw, 7.5rem)\`,
  \`line-height: 0.95\`, \`letter-spacing: -0.03em\`. On entering the viewport (once, 25% visible)
  it rises from \`y: 40px, opacity 0\` over 1000ms \`--ease-out-expo\`.
- right column: **Connect a source in two minutes. No credit card, no sales call, no lock-in.** (Geist 400, 17px, line-height 1.55, \`--color-muted\`, max-width 360px),
  then a row (gap 20px, margin-top 28px, items-center):
  - primary pill **Get started**: background \`--color-ink\`, text \`--color-paper\`, Geist 500 15px,
    height 52px, \`padding: 0 26px\`, radius \`--radius-pill\`. The label is a 1-line window
    (\`overflow: hidden\`, height 1.2em) holding the label twice stacked; on hover the stack
    translates \`-50%\` over 450ms \`--ease-out-expo\`, so the copy rolls up into its duplicate.
  - text link **Talk to an engineer** with a 1px underline that scales from \`scaleX(1)\` to
    \`scaleX(0)\` (origin right) on hover, then back from the left on leave.
The right column enters 150ms after the heading with the same rise.

**a Next.js App Router project notes:**

Only the section wrapper needs \`"use client"\` (for \`whileInView\`); the ticker is pure CSS.

### 3) Wordmark Footer — \`footer\`

\`<footer>\` background \`--color-ink\`, text \`--color-paper\`, \`padding: 96px 40px 0\` (24px sides
below 768px), \`overflow: hidden\`.

**Top grid** (\`grid-template-columns: 1.6fr repeat(3, 1fr)\`, gap 48px; two columns below 900px,
one below 560px):
- brand column: a 10px \`--color-ember\` square, then **Analytics for teams who would rather be building.** (Instrument Serif 400, 32px,
  line-height 1.1, max-width 320px, margin-top 20px) and a mail link **hello@northwind.dev**
  (Geist 400, 15px, \`--color-muted\`, hover \`--color-paper\`, margin-top 24px).
- three link columns headed **Product**, **Company**, **Resources** (Geist 500, 12px, uppercase,
  letter-spacing 0.14em, \`--color-muted\`, margin-bottom 18px), each with four links
  (Geist 400, 15px, line-height 2.1):
  Product → Overview, Integrations, Changelog, Status ·
  Company → About, Careers, Customers, Contact ·
  Resources → Docs, Guides, API reference, Security.
  Each link shows a 6px ember dot that scales from 0 to 1 at its left on hover while the text
  shifts 12px right (300ms \`--ease-out-expo\`).

**Legal row** (margin-top 80px, \`padding: 20px 0\`, border-top 1px \`--color-hairline\`, flex
space-between, Geist 400 13px \`--color-muted\`): **© 2026 Northwind Labs** on the left; **Privacy**,
**Terms**, **Cookies** (gap 24px) on the right.

**Wordmark.** Below the legal row, **Northwind** set in Instrument Serif 400, one line,
\`line-height: 0.8\`, sized by JS so its width equals the footer's inner width exactly (measure
at 100px, scale the font size proportionally, re-fit on resize and after fonts load). Colour
\`--color-paper\`. It is clipped by the footer's bottom edge by 12% of its own height.
Each letter is an \`inline-block\` that starts at \`translateY(60%)\` and \`opacity 0\`; when the
footer is 30% visible (once) the letters rise to \`0\` / \`1\` over 1100ms \`--ease-out-expo\` with a
**45ms** stagger from left to right.

**a Next.js App Router project notes:**

The wordmark is a small client component; the rest of the footer can stay a server component.

## Fixed parameters (bake these in)

**Ember Field Hero**

- Lattice spacing 22px · base radius 1px · base alpha 0.14 · wave \`0.012 / 0.008 / 0.0006\`, amplitude 0.6
- Pointer radius 180px · max radius 2.6px · max ember alpha 0.9 · pointer lerp 0.08 · idle anchor (70%, 45%)
- Headline word rise 110% → 0, 900ms, stagger 90ms, delay 150ms · subline column delay 600ms / 700ms / y 16px
- Hairline 24px from bottom, 1200ms, delay 300ms
- Horizontal padding 40px (24px below 768px)

**Ticker Band CTA**

- Page inset 12px · card radius 28px · ticker height 44px, 28s loop, pause on hover
- Heading rise y 40px, 1000ms, threshold 0.25, once · right column delay 150ms
- Button height 52px · label roll 450ms
- Grid \`1.4fr 1fr\`, collapses below 900px

**Wordmark Footer**

- Padding 96px top, 40px sides (24px < 768px) · grid \`1.6fr repeat(3, 1fr)\` gap 48px
- Link hover: dot 6px scale 0→1, text x 0→12px, 300ms
- Legal row margin-top 80px, 13px
- Wordmark fit to inner width, line-height 0.8, bottom clip 12%, letters y 60%→0, 1100ms, stagger 45ms, threshold 0.3

## Assets

No external assets.

## Global rules

- Responsive from 360px to ultra-wide; no horizontal scroll at any width.
- Respect \`prefers-reduced-motion: reduce\`: skip entrance animations and scroll-linked motion, show final states.
- Semantic landmarks (\`header\`, \`main\`, \`section\` with headings, \`footer\`), visible \`:focus-visible\` states, \`alt\` text as given.
- Scroll and pointer listeners are passive; animate only \`transform\` and \`opacity\` (and \`filter\`/\`clip-path\` where specified).
"
`;

exports[`library > composes hero + cta + footer for every target without token conflicts > react 1`] = `
"# Build this page as a Vite + React + TypeScript project: Northwind

You are an expert creative front-end developer. Reproduce the page below exactly — same layout, copy, visuals, motion and interaction. Hardcode every value given here; nothing in it is a suggestion. Document language: \`en\`.

Build a **Vite + React 19 + TypeScript** project styled with **Tailwind CSS v4** (via \`@tailwindcss/vite\`, a single \`@import "tailwindcss";\` in \`src/index.css\`).
Use \`framer-motion\` for component-level motion unless a section names a different library.
One component per section under \`src/components/\`, composed in \`src/App.tsx\` in the order given. Design tokens go in \`@theme\` in \`src/index.css\`.

## What it is

A 3-section page, in this order:

1. **Ember Field Hero** (hero, dark): Full-viewport dark hero over a canvas dot field that warms to ember orange around the pointer, with a bottom-left serif headline that rises word by word out of a clipping mask.
2. **Ticker Band CTA** (cta, light): Light call-to-action card with an infinite ember ticker band across its top edge, an oversized serif headline and a dark pill button whose label rolls to a duplicate on hover.
3. **Wordmark Footer** (footer, dark): Dark footer with a brand column, three link columns and a full-bleed wordmark fitted edge to edge that rises letter by letter as the page bottoms out.

## Design tokens

\`\`\`css
:root {
  --color-ink: #0b0b0c;
  --color-paper: #f2efe8;
  --color-muted: #8a877f;
  --color-ember: #ff5a1f;
  --color-hairline: rgb(242 239 232 / 0.14);
  --radius-pill: 999px;
  --radius-card: 28px;
  --ease-out-expo: cubic-bezier(0.16, 1, 0.3, 1);
}
\`\`\`

### Fonts

- **Instrument Serif** (display): weights 400
- **Instrument Serif** italic (display): weights 400
- **Geist** (body): weights 400, 500

Load via \`https://fonts.googleapis.com/css2?family=Instrument+Serif:ital,wght@0,400;1,400&family=Geist:wght@400;500&display=swap\`.

## Libraries

- \`lenis@^1.3.26\`

## Sections (in order)

### 1) Ember Field Hero — \`hero\`

\`<section>\` height \`100svh\`, min-height \`40rem\`, background \`--color-ink\`, text \`--color-paper\`,
\`position: relative; overflow: hidden; isolation: isolate\`.

**Dot field (background).** A \`<canvas>\` absolutely filling the section at \`z-index: -1\`, sized to
the section × \`min(devicePixelRatio, 2)\`. It draws a square lattice of dots, spacing **22px**
(CSS px), base radius **1px**, base colour \`--color-paper\` at **14%** opacity. Each frame:
- a slow travelling wave modulates radius: \`r = 1 + 0.6 * sin(x * 0.012 + y * 0.008 + t * 0.0006)\`;
- within **180px** of the smoothed pointer, dots grow up to **2.6px** and blend toward
  \`--color-ember\` at up to **90%** opacity, with a smoothstep falloff to the edge of the radius;
- the pointer is smoothed with lerp **0.08** per frame; when the pointer leaves the section it
  glides back to the section's centre-right (\`70%\`, \`45%\`).
Redraw on \`requestAnimationFrame\` only while the section intersects the viewport.

**Header** (absolute top, \`padding: 28px 40px\`, flex row, space-between, items-center):
- left: a 10px \`--color-ember\` square followed by the wordmark **Northwind** (Geist 500, 15px,
  letter-spacing \`-0.01em\`);
- centre: three links **Product**, **Customers**, **Pricing** (Geist 400, 14px,
  \`--color-muted\`, hover \`--color-paper\`, gap 32px; hidden below 768px);
- right: a ghost pill **Sign in** (1px \`--color-hairline\` border, \`padding: 10px 18px\`, 14px).

**Content** (absolute bottom-left, \`left: 40px; bottom: 48px; right: 40px\`, flex row,
space-between, items-end; column below 768px with 32px gap):
- \`<h1>\` two lines, **Signal over** / **noise.**, Instrument Serif 400,
  \`font-size: clamp(3.5rem, 9vw, 9.5rem)\`, \`line-height: 0.92\`, \`letter-spacing: -0.03em\`.
  The second line is italic and coloured \`--color-ember\`.
  Every word sits in its own \`overflow: hidden\` box with \`padding-bottom: 0.08em\` and rises from
  \`translateY(110%)\` to \`0\`, **900ms**, \`--ease-out-expo\`, **90ms** stagger across both lines,
  starting **150ms** after load.
- right column (max-width 340px): the subline **Infrastructure analytics that surfaces the one metric that matters, the moment it moves.** (Geist 400, 16px, line-height 1.55,
  \`--color-muted\`), then 24px below a solid pill button **Start free trial**
  (\`--color-paper\` background, \`--color-ink\` text, Geist 500 15px, \`padding: 14px 22px\`, radius
  \`--radius-pill\`) with a trailing 16px arrow (\`M5 12h14M13 6l6 6-6 6\`, stroke 1.8) that moves
  **4px** right on hover (200ms, \`--ease-out-expo\`). The column fades up from \`y: 16px, opacity 0\`
  over 700ms, starting 600ms after load.

**Bottom hairline.** A 1px \`--color-hairline\` rule spans the section 24px above its bottom edge,
scaling in from \`scaleX(0)\` (origin left) over 1200ms starting 300ms after load.

Smooth scrolling for the whole page uses Lenis (\`new Lenis({ smoothWheel: true })\` driven by a
\`requestAnimationFrame\` loop). Load it with a dynamic \`import()\` and swallow failures: smooth
scroll is an enhancement, and the hero must still split and animate if the CDN is unreachable.

**a Vite + React + TypeScript project notes:**

Put the canvas loop in a \`useEffect\` with an \`IntersectionObserver\` gate and clean up the
animation frame and listeners on unmount. Headline and column entrances use \`framer-motion\`
(\`initial\` / \`animate\` with the delays above).

### 2) Ticker Band CTA — \`cta\`

\`<section>\` with \`padding: 12px\` on a \`--color-ink\` page background (the inset makes the card
float). Inside, one card: background \`--color-paper\`, text \`--color-ink\`, radius \`--radius-card\`,
\`overflow: hidden\`.

**Ticker band** (top of the card, height 44px, background \`--color-ember\`, text \`--color-ink\`,
Geist 500, 13px, uppercase, letter-spacing \`0.14em\`). The text **Ship faster · Sleep better · Know first** followed by a
6px ink dot is repeated enough times to cover twice the viewport width, laid out in one
\`display: flex; width: max-content\` track. The track translates from \`0\` to \`-50%\` linearly
over **28s**, looping forever, and pauses while the pointer is over the band.

**Body** (\`padding: clamp(48px, 9vw, 128px) clamp(24px, 6vw, 96px)\`), a two-column grid
(\`1.4fr 1fr\`, gap 48px, items-end; one column below 900px):
- \`<h2>\` **Ready when your data is.**: Instrument Serif 400, \`font-size: clamp(3rem, 7.5vw, 7.5rem)\`,
  \`line-height: 0.95\`, \`letter-spacing: -0.03em\`. On entering the viewport (once, 25% visible)
  it rises from \`y: 40px, opacity 0\` over 1000ms \`--ease-out-expo\`.
- right column: **Connect a source in two minutes. No credit card, no sales call, no lock-in.** (Geist 400, 17px, line-height 1.55, \`--color-muted\`, max-width 360px),
  then a row (gap 20px, margin-top 28px, items-center):
  - primary pill **Get started**: background \`--color-ink\`, text \`--color-paper\`, Geist 500 15px,
    height 52px, \`padding: 0 26px\`, radius \`--radius-pill\`. The label is a 1-line window
    (\`overflow: hidden\`, height 1.2em) holding the label twice stacked; on hover the stack
    translates \`-50%\` over 450ms \`--ease-out-expo\`, so the copy rolls up into its duplicate.
  - text link **Talk to an engineer** with a 1px underline that scales from \`scaleX(1)\` to
    \`scaleX(0)\` (origin right) on hover, then back from the left on leave.
The right column enters 150ms after the heading with the same rise.

**a Vite + React + TypeScript project notes:**

Use CSS \`@keyframes\` for the ticker (it is the one keyframe on the page) and \`framer-motion\`
\`whileInView\` with \`viewport={{ once: true, amount: 0.25 }}\` for the rises.

### 3) Wordmark Footer — \`footer\`

\`<footer>\` background \`--color-ink\`, text \`--color-paper\`, \`padding: 96px 40px 0\` (24px sides
below 768px), \`overflow: hidden\`.

**Top grid** (\`grid-template-columns: 1.6fr repeat(3, 1fr)\`, gap 48px; two columns below 900px,
one below 560px):
- brand column: a 10px \`--color-ember\` square, then **Analytics for teams who would rather be building.** (Instrument Serif 400, 32px,
  line-height 1.1, max-width 320px, margin-top 20px) and a mail link **hello@northwind.dev**
  (Geist 400, 15px, \`--color-muted\`, hover \`--color-paper\`, margin-top 24px).
- three link columns headed **Product**, **Company**, **Resources** (Geist 500, 12px, uppercase,
  letter-spacing 0.14em, \`--color-muted\`, margin-bottom 18px), each with four links
  (Geist 400, 15px, line-height 2.1):
  Product → Overview, Integrations, Changelog, Status ·
  Company → About, Careers, Customers, Contact ·
  Resources → Docs, Guides, API reference, Security.
  Each link shows a 6px ember dot that scales from 0 to 1 at its left on hover while the text
  shifts 12px right (300ms \`--ease-out-expo\`).

**Legal row** (margin-top 80px, \`padding: 20px 0\`, border-top 1px \`--color-hairline\`, flex
space-between, Geist 400 13px \`--color-muted\`): **© 2026 Northwind Labs** on the left; **Privacy**,
**Terms**, **Cookies** (gap 24px) on the right.

**Wordmark.** Below the legal row, **Northwind** set in Instrument Serif 400, one line,
\`line-height: 0.8\`, sized by JS so its width equals the footer's inner width exactly (measure
at 100px, scale the font size proportionally, re-fit on resize and after fonts load). Colour
\`--color-paper\`. It is clipped by the footer's bottom edge by 12% of its own height.
Each letter is an \`inline-block\` that starts at \`translateY(60%)\` and \`opacity 0\`; when the
footer is 30% visible (once) the letters rise to \`0\` / \`1\` over 1100ms \`--ease-out-expo\` with a
**45ms** stagger from left to right.

**a Vite + React + TypeScript project notes:**

Fit the wordmark with a \`ResizeObserver\` on the footer and re-run after \`document.fonts.ready\`.

## Fixed parameters (bake these in)

**Ember Field Hero**

- Lattice spacing 22px · base radius 1px · base alpha 0.14 · wave \`0.012 / 0.008 / 0.0006\`, amplitude 0.6
- Pointer radius 180px · max radius 2.6px · max ember alpha 0.9 · pointer lerp 0.08 · idle anchor (70%, 45%)
- Headline word rise 110% → 0, 900ms, stagger 90ms, delay 150ms · subline column delay 600ms / 700ms / y 16px
- Hairline 24px from bottom, 1200ms, delay 300ms
- Horizontal padding 40px (24px below 768px)

**Ticker Band CTA**

- Page inset 12px · card radius 28px · ticker height 44px, 28s loop, pause on hover
- Heading rise y 40px, 1000ms, threshold 0.25, once · right column delay 150ms
- Button height 52px · label roll 450ms
- Grid \`1.4fr 1fr\`, collapses below 900px

**Wordmark Footer**

- Padding 96px top, 40px sides (24px < 768px) · grid \`1.6fr repeat(3, 1fr)\` gap 48px
- Link hover: dot 6px scale 0→1, text x 0→12px, 300ms
- Legal row margin-top 80px, 13px
- Wordmark fit to inner width, line-height 0.8, bottom clip 12%, letters y 60%→0, 1100ms, stagger 45ms, threshold 0.3

## Assets

No external assets.

## Global rules

- Responsive from 360px to ultra-wide; no horizontal scroll at any width.
- Respect \`prefers-reduced-motion: reduce\`: skip entrance animations and scroll-linked motion, show final states.
- Semantic landmarks (\`header\`, \`main\`, \`section\` with headings, \`footer\`), visible \`:focus-visible\` states, \`alt\` text as given.
- Scroll and pointer listeners are passive; animate only \`transform\` and \`opacity\` (and \`filter\`/\`clip-path\` where specified).
"
`;
